--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,11 @@
+@import url(../assets/fonts/fonts.scss);
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
- 
+
+body {
+  font-family: "Roboto-Regular";
+}
