--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -7,3 +7,8 @@
   font-family: "Roboto-Medium";
   src: url(./Roboto/Roboto-Medium.ttf);
 }
+
+@font-face {
+  font-family: "Roboto-Bold";
+  src: url(./Roboto/Roboto-Bold.ttf);
+}
